--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <resources>
     <string name="app_name">1984</string>
     <string name="postar">Postar</string>
+    <string name="digite_o_que_estiver_pensando">Digite o que estiver pensando…</string>
+    <string name="id">id</string>
+    <string name="message">message</string>
+    <string name="visualizar">Visualizar</string>
 </resources>
