--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -3,4 +3,7 @@
     <string name="postar">Postar</string>
     <string name="digite_o_que_estiver_pensando">Digite o que estiver pensando...</string>
     <string name="visualizar">Visualizar</string>
+    <string name="app_name">1984</string>
+    <string name="message">mensagem</string>
+    <string name="visualizar">Visualizar</string>
 </resources>
